--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Bienvenidos a mi web</h1>
     <p>Agrego un parrafo</p>
+    <!-- Titulos -->
+    <h2>Estoy armando un titulo en un branch nuevo</h2>
+    <h3>Y tambien agrego un titulo</h3>   
 </body>
 </html>
