--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <p>Agrego un parrafo</p>
     <!-- Titulos -->
     <h2>Estoy armando un titulo en un branch nuevo</h2>
-    <h3>Y tambien agrego un titulo</h3>   
+    <h3>Y tambien agrego un titulo</h3>  
+    <!-- Equipo 1 le toco hacer section  -->
+    <section>
+        <h2>Soy el titulo del section</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, pariatur!
+        </p>
+    </section>
 </body>
 </html>
