--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <!-- Titulos -->
     <h2>Estoy armando un titulo en un branch nuevo</h2>
     <h3>Y tambien agrego un titulo</h3>
-    
+    <footer>
+        <p>Hecho con ♥ con ramas y merge</p>
+    </footer>
 </body>
 </html>
